update pytest hook

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -14,7 +14,7 @@ repos:
       - id: pytest-check
         types: [python]
         name: pytest
-        entry: pytest tests
+        entry: ./test.sh
         language: python
         pass_filenames: false
         always_run: true
