--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -14,7 +14,7 @@ repos:
       - id: pytest-check
         types: [python]
         name: pytest
-        entry: ./test.sh
+        entry: bash -c "chmod +x test.sh; ./test.sh"
         language: python
         pass_filenames: false
         always_run: true
