--- a/.github/workflows/pre-commit.yml
+++ b/.github/workflows/pre-commit.yml
@@ -9,4 +9,6 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - uses: actions/setup-python@v3
+    - name: install env
+        run: bash -c "chmod +x local.sh; ./local.sh"
     - uses: pre-commit/action@v3.0.1
