--- a/setup.cfg
+++ b/setup.cfg
@@ -5,5 +5,5 @@ extend-ignore = E731
 [options]
 packages = find:
 install_requires =
-    torch==2.2.1+cu121
+    torch==2.2.1
 python_requires = >=3.10
