--- a/setup.cfg
+++ b/setup.cfg
@@ -6,5 +6,5 @@ extend-ignore = E731
 packages = find:
 install_requires =
     torch==2.2.1
-    typing=
+    typing >= 3.7.4
 python_requires = >=3.10
